--- a/home.html
+++ b/home.html
@@ -4,27 +4,34 @@
     <title>First Html Page</title>
     <style>
       body {
-        height: 100vh;
-        margin: 20px;
         display: flex;
-        justify-content: space-between; /*justify-content는 default 값 , 주축방향(왼쪽에서 오른쪽)*/
-        align-items: center; /*align-items 는 수직방향*/
-      }
-      #second {
-        background-color: wheat;
-      }
-      .btn {
+        height: 100vh;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
       }
       div {
-        width: 300px;
-        height: 300px;
-        background-color: teal;
+        background-color: tomato;
+        width: 200px;
+        height: 200px;
+      }
+      @media screen and (min-width: 650px) and (max-width: 1200px) and (orientation: landscape) {
+        div {
+          background-color: teal;
+        }
+      }
+      span {
+        font-size: 36px;
+      }
+      @media screen and (orientation: landscape) {
+        span {
+          display: none;
+        }
       }
     </style>
   </head>
   <body>
     <div></div>
-    <div id="second"></div>
-    <div></div>
+    <span>Please Flip Your Phone</span>
   </body>
 </html>
